# hmat-oss

./: CMakeLists.txt
CMake/: HMATConfig.cmake.in
include/hmat/: hmat.h
src/: cluster_tree.cpp  cluster_tree.hpp  clustering.cpp  clustering.hpp  compression.cpp  default_engine.cpp  default_engine.hpp  h_matrix.cpp  hmat_cpp_interface.cpp  scalar_array.cpp
src/common/: timeline.cpp  timeline.hpp
